// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check bar Loader and styles render 1`] = `
.c0 {
  width: 100px;
  height: 100px;
  text-align: center;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0 auto;
}

.c0 > div {
  background-color: #000;
  height: 100%;
  width: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-animation: eUnCpy 1.2s infinite ease-in-out;
  animation: eUnCpy 1.2s infinite ease-in-out;
}

.c0 .rect2 {
  -webkit-animation-delay: -1.1s;
  animation-delay: -1.1s;
}

.c0 .rect3 {
  -webkit-animation-delay: -1.0s;
  animation-delay: -1.0s;
}

.c0 .rect4 {
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}

.c0 .rect5 {
  -webkit-animation-delay: -0.8s;
  animation-delay: -0.8s;
}

<div
  class="c0"
  data-testid="bar-loader"
  size="100"
>
  <div
    class="rect1"
  />
  <div
    class="rect2"
  />
  <div
    class="rect3"
  />
  <div
    class="rect4"
  />
  <div
    class="rect5"
  />
</div>
`;

exports[`Check default Loader and styles render 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  height: 60px;
  width: 60px;
  will-change: transform,opacity;
  margin: 0 auto;
}

.c0:before,
.c0:after,
.c0 div {
  content: '';
  will-change: transform,opacity;
  border-radius: 100%;
  -webkit-animation-fill-mode: both;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  position: absolute;
  top: 50%;
  left: 50%;
  margin: -30px;
  width: 60px;
  height: 60px;
  -webkit-animation: eyGOfj 1.3s 0s linear infinite;
  animation: eyGOfj 1.3s 0s linear infinite;
}

.c0:before {
  -webkit-animation-delay: -0.4s;
  animation-delay: -0.4s;
}

.c0:after {
  -webkit-animation-delay: -0.2s;
  animation-delay: -0.2s;
}

<div
  class="c0"
  data-testid="pulse-loader"
  size="60"
>
  <div />
</div>
`;

exports[`Check default render doesnt show Loader and styles 1`] = `null`;

exports[`Check light theme Loader and styles render 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  height: 60px;
  width: 60px;
  will-change: transform,opacity;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate3d(-50%,-50%,0);
  -ms-transform: translate3d(-50%,-50%,0);
  transform: translate3d(-50%,-50%,0);
}

.c0:before,
.c0:after,
.c0 div {
  content: '';
  will-change: transform,opacity;
  border-radius: 100%;
  -webkit-animation-fill-mode: both;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  position: absolute;
  top: 50%;
  left: 50%;
  margin: -30px;
  width: 60px;
  height: 60px;
  -webkit-animation: lkOjTQ 1.3s 0s linear infinite;
  animation: lkOjTQ 1.3s 0s linear infinite;
}

.c0:before {
  -webkit-animation-delay: -0.4s;
  animation-delay: -0.4s;
}

.c0:after {
  -webkit-animation-delay: -0.2s;
  animation-delay: -0.2s;
}

<div
  class="c0"
  data-testid="pulse-loader"
  size="60"
>
  <div />
</div>
`;

exports[`Check light theme bar Loader and styles render 1`] = `
.c0 {
  width: 100px;
  height: 100px;
  text-align: center;
  font-size: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate3d(-50%,-50%,0);
  -ms-transform: translate3d(-50%,-50%,0);
  transform: translate3d(-50%,-50%,0);
}

.c0 > div {
  background-color: #fff;
  height: 100%;
  width: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-animation: eUnCpy 1.2s infinite ease-in-out;
  animation: eUnCpy 1.2s infinite ease-in-out;
}

.c0 .rect2 {
  -webkit-animation-delay: -1.1s;
  animation-delay: -1.1s;
}

.c0 .rect3 {
  -webkit-animation-delay: -1.0s;
  animation-delay: -1.0s;
}

.c0 .rect4 {
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}

.c0 .rect5 {
  -webkit-animation-delay: -0.8s;
  animation-delay: -0.8s;
}

<div
  class="c0"
  data-testid="bar-loader"
  size="100"
>
  <div
    class="rect1"
  />
  <div
    class="rect2"
  />
  <div
    class="rect3"
  />
  <div
    class="rect4"
  />
  <div
    class="rect5"
  />
</div>
`;

exports[`Check takeover Loader and styles render 1`] = `
.c0 {
  position: fixed;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  background: linear-gradient(to bottom,#00222b,#003645);
}

<div
  class="c0"
  data-testid="loader-takeover"
/>
`;

exports[`Check takeover light appearance Loader and styles render 1`] = `
.c0 {
  position: fixed;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  background: #fff;
}

<div
  class="c0"
  data-testid="loader-takeover"
/>
`;
